package at.fhtw.bif3vz.swe.mtcg.if19b101.enumeration;

public enum ElementType {
    FIRE,
    WATER,
    NORMAL
}
