package at.fhtw.bif3vz.swe.mtcg.if19b101.enumeration;

public enum MonsterType {
    GOBLIN,
    DRAGON,
    WIZZARD,
    ORK,
    KNIGHT,
    KRAKEN,
    ELF,
    TROLL
}
